<resources>
    <string name="app_name">TouchNotes</string>
    <string name="add_note">Add note</string>
    <string name="note_title">Title</string>
    <string name="note_content">Type note content here</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="appwidget_text" translatable="false">EXAMPLE</string>
    <string name="add_widget" translatable="false">Add widget</string>
    <string name="notes">Notes</string>
    <string name="empty_add_notes">Empty, Add notes</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="sort_by_title">Sort by title</string>
    <string name="sort_by_created_time">Sort by created time</string>
    <string name="sort_by_modified_time">Sort by modified time</string>
    <string name="list_style">List style</string>
    <string name="grid_style">Grid style</string>
    <string name="delete_note">Delete note</string>
    <string name="delete_confirmation">Are you sure you want to delete the note?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="note_delete_success">Note successfully deleted</string>
    <!-- Preference Titles -->
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>
    <string name="theme_key" translatable="false">theme</string>
    <string name="system_default_theme" translatable="false">system_default</string>
    <string name="light_theme" translatable="false">light_theme</string>
    <string name="dark_theme" translatable="false">dark_theme</string>
    <string name="modified_time">Modified time:</string>
    <string name="created_time">Created time:</string>
    <string name="added_notes_appear_here">Added notes appear here</string>
    <string name="no_note_saved_note">No note saved note</string>
    <string name="use_system_default_text">Use system default</string>
    <string name="light_theme_text">Light</string>
    <string name="dark_theme_text">Dark</string>
    <string name="theme_text">Theme</string>
    <string name="note_updated_msg">Note updated</string>
    <string name="note_saved_msg">Note saved</string>
    <string name="bold">Bold</string>
    <string name="italic">Italic</string>
    <string name="underline">Underline</string>
    <string name="strike_through">Strike through</string>
    <string name="generate_pdf">Generate PDF</string>
    <string name="pdf_successfull">PDF successfully created</string>
    <string name="permission_title">Requesting Write Permission</string>
    <string name="write_perm_message">Without write permission granted, we can\'t generate PDF.</string>
    <string name="write_perm_positive">OK, request again</string>
    <string name="write_perm_negative">No, I don\'t need it</string>
    <string name="share_as">Share as</string>
    <string name="pdf">PDF</string>
    <string name="plain_text">Plain text</string>
</resources>