<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/actionSearch"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:icon="@drawable/ic_sort"
        android:title="@string/sort"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/actionSortByTitle"
                android:title="@string/sort_by_title"
                android:icon="@drawable/ic_text"/>
            <item
                android:id="@+id/actionSortByCreatedTime"
                android:title="@string/sort_by_created_time"
                android:icon="@drawable/ic_created_time"/>
            <item
                android:id="@+id/actionSortByModifiedTime"
                android:title="@string/sort_by_modified_time"
                android:icon="@drawable/ic_modified_time"/>
        </menu>

    </item>
</menu>