<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/actionSave"
        android:icon="@drawable/ic_save"
        android:title="@string/save"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/actionDelete"
        android:icon="@drawable/ic_delete_24"
        android:title="@string/delete"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/actionShare"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/actionGeneratePDF"
        android:title="@string/generate_pdf"
        app:showAsAction="ifRoom"/>
</menu>